# bueno

./: .bazelrc  .clang-format  .gitignore  .golangci.yaml  BUILD.bazel  MODULE.bazel  go.mod  go.sum  maven_install.json
.github/workflows/: bazel-build.yaml
ace/: .gitignore  BUILD.bazel  ace.go  ace.go.c  ace.go.h  ace_status.go  util.go
ace/address/: BUILD.bazel  address.go
colmi/: BUILD.bazel  colmi.go
colmi/cmd/: BUILD.bazel  main.go
core/log/: BUILD.bazel  log.go
core/logutil/: BUILD.bazel  logutil.go
core/withlock/: BUILD.bazel  withlock.go
experimental/jbpatch/src/main/java/com/mobileread/ixtab/jbpatch/: BUILD.bazel  Environment.java  I18n.java  JBPatchMetadata.java  KindleDevice.java  KindleDirectories.java  Log.java  MD5.java  Patch.java  PatchContainer.java  PatchMetadata.java  PatchPolicy.java  PatchRepository.java  Patches.java
experimental/jbpatch/src/main/java/com/mobileread/ixtab/jbpatch/bootstrap/: PatchingClassLoader.java  Stage1.java  Stage2.java
experimental/jbpatch/src/main/java/com/mobileread/ixtab/jbpatch/builtin/: DeviceInfoPatch.java
experimental/jbpatch/src/main/java/com/mobileread/ixtab/jbpatch/composition/: PathFinder.java  State.java  Transition.java
experimental/jbpatch/src/main/java/com/mobileread/ixtab/jbpatch/conf/: ConfigurableSetting.java  ConfigurableSettings.java
experimental/jbpatch/src/main/java/com/mobileread/ixtab/jbpatch/resources/: ConfigurationResource.java  JBPatchResource.java  KeyValueFile.java  KeyValueResource.java  ResourceMapProvider.java
experimental/jbpatch/src/main/java/com/mobileread/ixtab/patch/: BUILD.bazel  MoreOptionsPatch.java
kindle-keymap/: BUILD.bazel  config.yaml
kindle-keymap/actions/: BUILD.bazel  actions.go
kindle-keymap/cmd/: BUILD.bazel  main.go
kindle-keymap/cmd/kindle-keymap/: BUILD.bazel  main.go  pairing.go
kindle-keymap/config/: BUILD.bazel  config.go
kindle-keymap/install/: BUILD.bazel  install.go
kindle-keymap/kual/: BUILD.bazel  config.xml  menu.json  tar.bzl
kindle-keymap/lipcaction/: BUILD.bazel  lipcaction.go
kindle-keymap/udev/: BUILD.bazel  udev.go
kindle-keymap/watcher/: BUILD.bazel  watcher.go
kindle-keymap/xkb/: BUILD.bazel  xkb.go
lipc/: BUILD.bazel  lipc.go
lipc-demo/cmd/: BUILD.bazel  lipc-demo.go
quietly/: BUILD.bazel  quietly.go
tools/build_rules/firmware/: firmware.BUILD.bazel  firmware.bzl
tools/nogo/: deps.go
tools/scripts/: sync_ace_headers.sh
udev/: BUILD.bazel  udev.go
xkb/: BUILD.bazel  xkb.go
