load("@com_github_sluongng_nogo_analyzer//staticcheck:def.bzl", "ANALYZERS", "staticcheck_analyzers")
load("@gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "nogo")

gazelle(name = "gazelle")

nogo(
    name = "nogo",
    vet = True,
    visibility = ["//visibility:public"],
    deps = staticcheck_analyzers(ANALYZERS),
)
