load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library")

go_library(
    name = "kindle-keymap_lib",
    srcs = ["main.go"],
    importpath = "github.com/clintharrison/bueno/kindle-keymap/cmd/kindle-keymap",
    visibility = ["//visibility:private"],
    deps = [
        "//core/log",
        "//kindle-keymap/config",
        "//kindle-keymap/lipcaction",
        "//udev",
        "//xkb",
        "@com_github_holoplot_go_evdev//:go-evdev",
        "@com_github_pilebones_go_udev//netlink",
    ],
)

go_binary(
    name = "kindle-keymap",
    embed = [":kindle-keymap_lib"],
    pure = "off",
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "kindlehf",
    platform = "//tools/platforms:kindlehf_platform",
    target = ":kindle-keymap",
    visibility = ["//visibility:public"],
)
