load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library")

go_library(
    name = "kindle-keymap_lib",
    srcs = [
        "main.go",
        "pairing.go",
    ],
    importpath = "github.com/clintharrison/bueno/kindle-keymap/cmd/kindle-keymap",
    visibility = ["//visibility:private"],
    deps = [
        "//ace",
        "//ace/address",
        "//core/log",
        "//kindle-keymap/config",
        "//kindle-keymap/install",
        "//kindle-keymap/lipcaction",
        "//kindle-keymap/watcher",
        "//udev",
        "//xkb",
        "@com_github_holoplot_go_evdev//:go-evdev",
        "@com_github_pilebones_go_udev//netlink",
    ],
)

go_cross_binary(
    name = "kindlehf",
    platform = "//tools/platforms:kindlehf_platform",
    target = ":kindle-keymap",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "kindle-keymap",
    embed = [":kindle-keymap_lib"],
    visibility = ["//visibility:public"],
)
