load("@rules_java//java:java_binary.bzl", "java_binary")
load("@rules_java//java:java_library.bzl", "java_library")
load("@rules_java//java:java_single_jar.bzl", "java_single_jar")

java_library(
    name = "jbpatch",
    srcs = glob(["**/*.java"]),
    visibility = [
        "//experimental/jbpatch/src/main/java/com/mobileread/ixtab/patch:__subpackages__",
    ],
    deps = [
        "@maven//:net_sourceforge_serp_serp",
        "@maven//:org_osgi_org_osgi_framework",
    ],
)

java_single_jar(
    name = "jbpatch_jar",
    deploy_env = [
        ":environment",
    ],
    deploy_manifest_lines = [
        "Bundle-Name: JBPatch",
        "Bundle-Version: 5.0.0",
        "Bundle-Description: Java Bytecode Patcher",
        "Bundle-Vendor: clint32",
        "Bundle-Activator: com.mobileread.ixtab.jbpatch.bootstrap.Stage1",
    ],
    deps = [":jbpatch"],
)

# This is a bit of a hack? But we need to convince Bazel these libraries are provided by the environment...
java_binary(
    name = "environment",
    # this is just a dummy value
    main_class = "None",
    runtime_deps = [
        "@maven//:org_osgi_org_osgi_framework",
    ],
)
